# idle-screens

./: .env.example  .gitignore  CLAUDE.md  CREDITS.md  LICENSE  README.md  THREAT-MODEL.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.changeset/: aval-hardening.md  config.json  schema-spec-upgrades.md  trails-drift-advise.md  worker-savers-schema.md  worker-savers-steering.md
.claude/: launch.json
.github/workflows/: ci.yml  linux-ci.yml  linux-release.yml  mac-release.yml  pages.yml  release.yml
apps/linux/: .gitignore  Cargo.toml  README.md
apps/linux/packaging/: PKGBUILD  config.toml.example  hypridle-kiosk.conf.example  hypridle.conf.example  hypridle.lua.example
apps/linux/packaging/omarchy/: hypridle.listener.snippet  idle-screens-tray.desktop  install-hypridle.sh  install-omarchy.sh  omarchy-idle-screens
apps/linux/scripts/: check-deps.sh  dev-run.sh  install.sh  make-release.sh  make-src-tarball.sh  sync-web.sh
apps/linux/src/: bundle.rs  cli.rs  config.rs  idle.rs  main.rs  platform.rs  state.rs  tray.rs  webview.rs  windows.rs
apps/mac/: Info.plist  Package.swift  README.md  build-app.sh  notarize.sh
apps/playground/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
docs/: README.md  future-ideas.md  metaquarium-port.md  roadmap-scene-expressiveness.md  saver-art-ideas.md  saver-benchmark-prompts.md  v2-simulation-schema-notes.md
docs/research/: architecture-addendum.md  aval-findings.md  channel-remote-control.md  cloudflare-durable-objects-spec.md  (+10 more)
(+70 files in other folders)
