[package]
name = "idle-screens-wayland"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "idle-screens screensaver overlay for Wayland/Hyprland (Omarchy)"
license = "MIT"
repository = "https://github.com/shaaaaawn/idle-screens"

# Deliberately standalone — never join a parent cargo workspace.
[workspace]

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
glib-unix = "0.22"
webkit6 = "0.6"
gtk4-layer-shell = "0.8"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
ureq = "2"
fastrand = "2"
dirs = "5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
ksni = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
lto = "thin"
strip = true
